--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -1,10 +1,11 @@
 #home {
   position: relative;
-  background: url(../../assets/bgIMG.png);
-  background-size: cover; //always use for image as bg
-  background-repeat: repeat;
+  background: url("../../assets/bgIMG.png");
+  background-size: cover;
   background-position: center;
+  background-repeat: repeat;
 
+  // disable the default padding styles
   .app__wrapper {
     padding: 0;
 
@@ -20,17 +21,17 @@
   height: 100%;
   flex-direction: row;
 
-  padding: 6rem 2rem 0;
+  padding: 6rem 2rem 0rem;
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 2000px) {
     padding-top: 8rem;
   }
 
-  @media screen and (max-width: 1100px) {
+  @media screen and (max-width: 1200px) {
     flex-direction: column;
   }
 
-  @media screen and (min-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 6rem 1rem 2rem;
   }
 }
@@ -43,7 +44,9 @@
   align-items: flex-start;
   height: 100%;
 
-  @media screen and (max-width: 2000px) {
+  margin: 0 2rem;
+
+  @media screen and (max-width: 1200px) {
     width: 100%;
     margin-right: 0rem;
   }
@@ -59,11 +62,12 @@
   .badge-cmp,
   .tag-cmp {
     padding: 1rem 2rem;
-    border: var(--white-color);
+    background: var(--white-color);
     border-radius: 15px;
     flex-direction: row;
     width: auto;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   }
 
   .tag-cmp {
@@ -79,12 +83,13 @@
 
   span {
     font-size: 2.5rem;
-    @media screen and (min-width: 1200px) {
+
+    @media screen and (min-width: 2000px) {
       font-size: 5rem;
     }
   }
 
-  @media screen and (max-width: 1100px) {
+  @media screen and (max-width: 1200px) {
     justify-content: flex-start;
     align-items: flex-start;
   }
@@ -103,14 +108,17 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
+
     background: var(--white-color);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+
+    img {
+      width: 60%;
+      height: 60%;
+    }
   }
 
-  img {
-    width: 60%;
-    height: 60%;
-  }
+  // circles with different height & width
 
   div:nth-child(1) {
     width: 100px;
@@ -129,24 +137,23 @@
   }
 
   @media screen and (min-width: 2000px) {
-    div:nth-child(1) {
-      width: 200px;
-      height: 200px;
+    div:nth-child(2) {
+      width: 400px;
+      height: 400px;
     }
 
-    div:nth-child(2) {
-      margin: 1.75rem;
+    div:nth-child(3) {
       width: 170px;
       height: 170px;
     }
 
-    div:nth-child(3) {
+    div:nth-child(1) {
       width: 200px;
       height: 200px;
     }
   }
 
-  @media screen and (max-width: 900px) {
+  @media screen and (max-width: 1200px) {
     width: 100%;
     flex-direction: row;
     flex-wrap: wrap;
@@ -161,6 +168,7 @@
 .app__header-img {
   flex: 1;
   height: 100%;
+
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
