--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -165,17 +165,24 @@
   }
 }
 
+.app__header-img-resume {
+  &:hover {
+    width: 80%;
+    border: 5px double #555;
+  }
+}
+
 .app__header-img {
   flex: 1;
-  height: 100%;
+  height: 50%;
 
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
   position: relative;
 
   img {
-    width: 100%;
+    width: 50%;
     object-fit: contain;
     z-index: 1;
   }
